# template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  req.txt  tox.ini
.github/workflows/: documentation.yaml  documentation.yml  precommit.yml  test.yml
API/: index.html
Installation/: index.html
demo_precommit/: __init__.py  __main__.py
docs/: .buildinfo  Installation.md  objects.inv  requirements.txt  searchindex.js  template_package.html  template_package.stubby.html  template_package.ui.html  usage.html
docs/.doctrees/: environment.pickle  template_package.doctree  template_package.stubby.doctree
docs/_sources/: template_package.rst.txt  template_package.stubby.rst.txt
docs/doctrees/: index.doctree  template_package.ui.doctree  usage.doctree
docs/source/: conf.py  index.rst  readme_link.md  template_package.ui.rst
full/: index.html
mermaid/: index.html
template_package/: __init__.py  __main__.py
template_package/stubby/: __init__.py
template_package/ui/: __init__.py  accepted_headers.py
tests/: main_test.py
