[tool.poetry]
name = "template_package"
version = "0.2.0"
description = ""
authors = ["ozy-viking <zthankin@gmail.com>"]
readme = "README.rst"
packages = [{include = "template_package"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]  # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR\\template_package'# '$MYPY_CONFIG_FILE_DIR\template_package'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
