[tool.poetry]
name = "template_package"
version = "1.0.2"
description = ""
authors = ["ozy-viking <zthankin@gmail.com>"]
readme = "README.md"
packages = [{include = "template_package"}]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

# Extras for docs
sphinx = { version = "*", optional = true }
myst-parser = { version = "^0.18.1", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true }

# Extras for development
mypy = { version = "^1.0.1", optional = true }
tox = { version = "^4.4.6", optional = true }
pytest = { version = "^7.2.1", optional = true }

[tool.poetry.group.dev]  # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[tool.poetry.extras]
docs = ['sphinx', 'myst-parser', 'sphinx-rtd-theme']
dev = ['mypy', 'tox', 'pytest']

[tool.poetry.scripts]
square = "template_package:square"

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/template_package'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
