[tool.poetry]
name = "template_package"
version = "1.2.0a0"
description = "A Template python package"
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Ozy-Viking/template"
documentation = "https://ozy-viking-template.readthedocs.io"
packages = [{include = "template_package"}]

[tool.poetry.dependencies]
setuptools = "^67.6.0"
python = "^3.10"
icecream = "^2.1.3"

# Documentation install
mkdocs = {version = "^1.4.2", optional = true, extras = ["docs"]}
mkdocs-autorefs = {version = "^0.4.1", optional = true, extras = ["docs"]}
mkdocs-git-revision-date-localized-plugin = {version = "^1.2.0", optional = true, extras = ["docs"]}
mkdocs-material = {version = "^9.1.2", optional = true, extras = ["docs"]}
mkdocstrings = {version = "^0.20.0", optional = true, extras = ["docs"]}
mkdocstrings-python = {version = "^0.8.3", optional = true, extras = ["docs"]}
pymdown-extensions = {version = "^9.10", optional = true, extras = ["docs"]}

[tool.poetry.group.dev]  # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[tool.poetry.extras]
docs = ['sphinx', 'myst-parser', 'sphinx-rtd-theme']
dev = ['mypy', 'tox', 'pytest']

[tool.poetry.scripts]
square = "template_package:main"

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/template_package'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
